Closed Bug 235735 Opened 22 years ago Closed 22 years ago

fix callers that cast away const on result of ns[C]String::get

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dbaron, Assigned: dbaron)

Details

Attachments

(1 file)

Comment on attachment 142376 [details] [diff] [review] patch > + * deperecated reading iterators > + grabArgs(cargs.BeginWritnig(), &args); r+sr=darin with those two typos fixed. i've also added a fix for the requestURI munging in nsHttpChannel. in that case, a |const char*| is later cast to |char*| so the 'greping' didn't detect it. i fear there may be others like this :(
Attachment #142376 - Flags: superreview+
Attachment #142376 - Flags: review+
patch checked in thx dbaron!!!
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Component: String → XPCOM
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: